#remove same id: id must not be reused #add meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Create and avatar of an image file using this
+    cool ai website avatar sdk
+    ">
     <title>Avatar Sdk</title>
   </head>
   <body>
